yaml/zipcodeservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipcode
spec:
  selector:
    matchLabels:
      app: zipcode
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: zipcode
        version: latest
    spec:
      containers:
      - name: zipcode
        image: harbor.tibcopsg.net/cloud-demos/zipcodeexample:latest
        ports:
        - containerPort: 8080 
  #      env:
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: zipcode-service
spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: zipcode
  ports:
    - name: http
      port: 8080
      nodePort: 30080
  type: NodePort
#  type: ClusterIP
---
